solved the bug with dark mode + added some css classes

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,6 +19,23 @@ a {
   box-sizing: border-box;
 }
 
+@keyframes rotate {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.rotate:hover {
+  animation: rotate 2s infinite;
+}
+
+.bgLight {
+  background-color: #dee4e7;
+}
+
 @font-face {
   font-family: "burtons";
   src: url("../public/Burtons.otf");
